[tool.poetry]
name = "moviebot"
version = "0.1.0"
description = ""
authors = ["Andrei Gromov <zaebuntu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
python-telegram-bot = "^20.3"
dateparser = "^1.1.8"
spacy = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
